--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/130801212?s=200&v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>essai</title>
+    <title>ESSAi</title>
 		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="bg-white dark:bg-gray-900">
