--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/130801212?s=200&v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ESSAi</title>
 		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script>
-      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.classList.add('dark')
-      } else {
-        document.documentElement.classList.remove('dark')
-      }
-
-      // Whenever the user explicitly chooses light mode
-      localStorage.theme = 'light'
-
-      // Whenever the user explicitly chooses dark mode
-      localStorage.theme = 'dark'
-
-      // Whenever the user explicitly chooses to respect the OS preference
-      localStorage.removeItem('theme')
-    </script>
   </head>
   <body class="bg-white dark:bg-gray-900">
     <div id="root"></div>
